compiler/testData/diagnostics/tests/annotations/missingValOnParameter.kt
annotation class Ann(
        val a: Int,
        <!MUTABLE_ANNOTATION_PARAMETER!>var<!> b: Int,
        <!MISSING_VAL_ON_ANNOTATION_PARAMETER!>c: String<!>
        )
